Added option to add multiple masks to same slice

--- a/TomoSAM/Resources/UI/tomosam.ui
+++ b/TomoSAM/Resources/UI/tomosam.ui
@@ -2792,7 +2792,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QPushButton" name="pushUndoInterp">
+               <widget class="QPushButton" name="pushUndo">
                 <property name="palette">
                  <palette>
                   <active>
